--- a/app/templates/auth.html
+++ b/app/templates/auth.html
@@ -1,8 +1,8 @@
 <html>
-    <head>
-        <title>Passwordless Authentification</title>
-    </head>
-    <body>
-        <h1>{{ result }}</h1>
-    </body>
+<head>
+    <title>Passwordless Authentication</title>
+</head>
+<body>
+<h1>{{ result }}</h1>
+</body>
 </html>
